syntax = "proto3";
package attestation.v1;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/crypto-org-chain/cronos/v2/relayer/types";

// Msg defines the attestation Msg service.
service Msg {
  // SubmitBlockAttestation submits block finalization data from an EVM chain
  rpc SubmitBlockAttestation(MsgSubmitBlockAttestation) returns (MsgSubmitBlockAttestationResponse);

  // SubmitBatchBlockAttestation submits multiple block attestations
  rpc SubmitBatchBlockAttestation(MsgSubmitBatchBlockAttestation) returns (MsgSubmitBatchBlockAttestationResponse);

  // SubmitForcedTransaction submits a forced transaction to be executed on target chain
  rpc SubmitForcedTransaction(MsgSubmitForcedTransaction) returns (MsgSubmitForcedTransactionResponse);
}

// MsgSubmitBlockAttestation represents block data forwarded from a Cosmos chain
message MsgSubmitBlockAttestation {
  option (amino.name) = "attestation/SubmitBlockAttestation";

  // Relayer submitting the attestation
  string relayer = 1;

  // Source chain ID (e.g., "cronos_25-1")
  string chain_id = 2;

  // Block height
  uint64 block_height = 3;

  // Block timestamp
  int64 timestamp = 4;

  // Block hash
  bytes block_hash = 5;

  // Application hash
  bytes app_hash = 6;

  // Block header (encoded)
  bytes block_header = 7;

  // Transaction results (encoded)
  bytes tx_results = 8;

  // FinalizeBlock events (encoded)
  bytes finalize_block_events = 9;

  // Validator updates (encoded)
  bytes validator_updates = 10;

  // Consensus parameter updates (encoded)
  bytes consensus_param_updates = 11;

  // Relayer signature over the block data
  bytes signature = 12;
}

// MsgSubmitBlockAttestationResponse is the response for submitting block attestation
message MsgSubmitBlockAttestationResponse {
  // Attestation ID assigned by the chain
  uint64 attestation_id = 1;

  // Whether the block achieved finality immediately
  bool finalized = 2;
}

// MsgSubmitBatchBlockAttestation submits multiple block attestations
message MsgSubmitBatchBlockAttestation {
  option (amino.name) = "attestation/SubmitBatchBlockAttestation";

  // Relayer submitting the attestations
  string relayer = 1;

  // Source chain ID
  string chain_id = 2;

  // List of block attestations
  repeated BlockAttestationData attestations = 3;
}

// BlockAttestationData contains the data for a single block attestation
message BlockAttestationData {
  // Block height
  uint64 block_height = 1;

  // Block timestamp
  int64 timestamp = 2;

  // Block hash
  bytes block_hash = 3;

  // Application hash
  bytes app_hash = 4;

  // Block header (encoded)
  bytes block_header = 5;

  // Transaction results (encoded)
  bytes tx_results = 6;

  // FinalizeBlock events (encoded)
  bytes finalize_block_events = 7;

  // Validator updates (encoded)
  bytes validator_updates = 8;

  // Consensus parameter updates (encoded)
  bytes consensus_param_updates = 9;
}

// MsgSubmitBatchBlockAttestationResponse is the response for batch submission
message MsgSubmitBatchBlockAttestationResponse {
  // List of attestation IDs
  repeated uint64 attestation_ids = 1;

  // Number of blocks that achieved immediate finality
  uint32 finalized_count = 2;
}

// MsgSubmitForcedTransaction wraps a standard Cosmos transaction for forced execution
message MsgSubmitForcedTransaction {
  option (amino.name) = "attestation/SubmitForcedTransaction";

  // Address submitting the forced transaction
  string submitter = 1;

  // Target chain ID where the transaction should be executed
  string target_chain_id = 2;

  // Target chain type (e.g., "evm", "cosmos")
  string target_chain_type = 3;

  // Priority level (0-255, higher = more urgent)
  uint32 priority = 4;

  // Transaction type
  ForcedTxType tx_type = 5;

  // Serialized transaction data (chain-specific format)
  bytes transaction_data = 6;

  // Deadline block height (0 = no deadline)
  uint64 deadline = 7;

  // Optional metadata
  string metadata = 8;
}

// ForcedTxType defines the type of forced transaction
enum ForcedTxType {
  option (gogoproto.goproto_enum_prefix) = false;

  // Normal forced transaction
  FORCED_TX_TYPE_NORMAL = 0 [(gogoproto.enumvalue_customname) = "ForcedTxTypeNormal"];

  // Governance-related operation
  FORCED_TX_TYPE_GOVERNANCE = 1 [(gogoproto.enumvalue_customname) = "ForcedTxTypeGovernance"];

  // Escape hatch / emergency withdrawal
  FORCED_TX_TYPE_ESCAPE_HATCH = 2 [(gogoproto.enumvalue_customname) = "ForcedTxTypeEscapeHatch"];

  // Emergency system operation
  FORCED_TX_TYPE_EMERGENCY = 3 [(gogoproto.enumvalue_customname) = "ForcedTxTypeEmergency"];
}

// MsgSubmitForcedTransactionResponse is the response for forced transaction submission
message MsgSubmitForcedTransactionResponse {
  // Unique ID for the forced transaction
  uint64 forced_tx_id = 1;

  // Estimated execution block height
  uint64 estimated_execution_height = 2;
}
